2010-06-08  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_module.c: CHANGE: Refactor OSD module to be an instance of display module

	* src/ol_display_module.c: ADD: Extract display module interfaces

2010-06-07  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c: Use the queue drawing mechanism of gtk instead of painting the lyrics directly in OSD Window.

2010-06-04  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_rhythmbox.c (ol_player_rhythmbox_get_music_length): FIX: The duration returned by rhythmbox is right now.

	* src/ol_lrc_parser.c (_parse_tag): FIX: Issue 99, Crash when loading a lyric file begin with a time stamp

2010-05-27  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_trayicon.c: FIX: The player control items in the popup menu of app indicator will be changed according to the player status

2010-05-26  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_juk.c: ADD: Juk support.

	* src/ol_player_qmmp.c: ADD: Qmmp support. Close part of Issue 92.

	* src/ol_osd_window.c (ol_osd_window_reset_shape_pixmap): FIX: Memory leak when change width of OSD Window
	(ol_osd_window_set_percentage): FIX: Issue 93. The shape of the OSD Window will be updated correctly when needed.

2010-05-21  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_render.c (ol_osd_render_update_font): FIX: Memory leak when setting font for renderer of OSD Window

	* src/ol_config.c (ol_config_emit_change): FIX: Memory leak when emitting signals

2010-05-19  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_fetch_module.c: CHANGE: flush pipe before exit search and download child process. Hope this will fix issue 66.

2010-05-18  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c: CHANGE: Remove gtkprivate.h dependency in OSD Window

	* src/ol_osd_module.c (ol_osd_module_set_played_time): FIX: A memory leak in OSD module on getting current lyric text.